Fixed white space issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body{background-image:url('./bkg.jpg');
-    background-size: 1500px;
+    background-size: cover;
+	background-attachment: fixed;
     background-repeat: no-repeat;
   overflow: scroll;
 }
